# Ultra-Omega

./: .gitignore  ANALISIS_SEGFAULT.md  Cargo.toml  FOLDER_ORGANIZATION_IDEAS.md  IDEAS.md  MAPA_DE_NODOS_ANALISIS.md  MOJO_EXAMPLES.md  MOJO_INTEGRATION_PLAN.md  MOJO_SUMMARY.md  PLAN_REFACTORIZACION.md  PYTHON_INTEGRATION_PLAN.md  Parametros-1.txt  README.md  README_LINUX.md  VERIFICACION_NASM.md  arquitecturas.md  build.rs  install_dependencies.sh  temp.asm  ultra_omega_templates.txt
shaders/: text.frag  text.vert
src/: app.rs  config.rs  editor_history.rs  main.rs  node_graph.rs  terminal.rs  workspace.rs
src/app/: breadcrumbs.rs  command_palette.rs  editor.rs  interaction.rs  menu.rs  mod.rs  problems.rs  runtime.rs  sidebar.rs  template_palette.rs  workspace.rs
src/compilation/: auto_linker.rs  compiler_detector.rs  cpp_linker.rs  mod.rs  terminal.rs
src/core/: app.rs  folder_node.rs  mod.rs  node_graph.rs  types.rs
src/expressions/: ANALISIS_PROBLEMAS.md  INTEGRATION.md  README.md  WARNINGS_EXPLICACION.md  channels.rs  evaluator.rs  examples.rs  mod.rs  parser.rs
src/inheritance/: folder_language.rs  language_validator.rs  mod.rs
src/languages/: mod.rs
src/languages/cpp/: mod.rs  templates.rs
src/mojo/: ai.rs  bridge.rs  evaluator.rs  math.rs  mod.rs
src/storage/: file_watcher.rs  hda.rs  migration.rs  mod.rs  node_storage.rs  project.rs  workspace.rs
src/templates/: mod.rs
src/templates/asm/: arrays.asm  conditional.asm  functions.asm  hello_world.asm  lib_io.asm  lib_math.asm  lib_memory.asm  lib_print.asm  lib_string.asm  loop.asm  strings.asm  sum.asm  variables.asm
src/templates/asm-linux/: arrays.asm  conditional.asm  functions.asm  hello_world.asm  lib_io.asm  lib_math.asm  lib_memory.asm  lib_print.asm  lib_string.asm  loop.asm  strings.asm  sum.asm  variables.asm
src/templates/asm-windows/: arrays.asm  conditional.asm  functions.asm  hello_world.asm  lib_io.asm  lib_math.asm  lib_memory.asm  lib_print.asm  lib_string.asm  loop.asm  strings.asm  sum.asm  variables.asm
src/templates/binary/: README.md  mod.rs
src/templates/binary/cpu/: README.md  hello_world.hex  hello_world.json  math_add64.hex  math_add64.json  (+8 more)
src/templates/c/: arrays.c  functions.c  hello_world.c  lib_io.c  lib_memory.c  lib_string.c  lib_utils.c  structs.c  variables.c
src/templates/cpp/: clases_poo.cpp  classes.cpp  cpp_version_detection.hpp  estructuras_control.cpp  excepciones_errores.cpp  funciones.cpp  hello_world.cpp  manejo_archivos.cpp  modern.cpp  proyecto_calculadora.cpp  punteros_memoria.cpp  stl.cpp  stl_containers.cpp  templates_genericos.cpp  variables.cpp  variables_tipos.cpp
src/templates/cpp/cpp11/: CMakeLists.txt  hello_modern.cpp  hello_simple.cpp  hello_world.cpp  hello_world.hpp  main_hello_world.cpp  stl_features.cpp  threading_demo.cpp
src/templates/cpp/cpp17/: CMakeLists.txt  advanced_features.cpp  advanced_features.hpp  advanced_features_impl.cpp  core_features.cpp  core_features_updated.cpp  main_advanced_features.cpp  parallel_filesystem.cpp
src/templates/directx12/: CMakeLists.txt  README.md  adapter.cpp  buffers.cpp  command_allocator.cpp  command_list.cpp  device.cpp  directx12_types.h  helpers.cpp  main.cpp  pipeline_state.cpp  render_loop.cpp  resource_manager.cpp  root_signature.cpp  shader.hlsl  swapchain.cpp  sync_manager.cpp  window_manager.cpp
src/templates/fastos/: Makefile  README.md  boot_sector.asm  bootloader_stage2.asm  build.bat  burn_usb.bat  idt.c  idt.h  kernel.h  kernel_entry.asm  kernel_main.c  keyboard.h  keyboard_driver.c  linker.ld  memory.c  memory.h  ports.h  shell.c  shell.h  string.c  string.h  timer.c  timer.h  types.h  vga.h  vga_driver.c
src/templates/fastos64/: Makefile  README.md  boot_multiboot2.asm  boot_uefi.asm  build64.bat  build_simple.bat  fastos_xp.asm  font8x16.h  framebuffer.c  framebuffer.h  gpu_nvidia.c  gpu_nvidia.h  idt64.h  kernel_entry64.asm  kernel_main64.c  keyboard64.h  linker64.ld  memory64.h  pci.c  pci.h  ports64.h  shell64.h  types64.h  vfio_passthrough.md  vulkan_fastos.c  vulkan_fastos.h  vulkan_native.c  vulkan_native.h
src/templates/fastos64_rust/: README.md
src/templates/fastos64_rust/integration/: Cargo.toml  README.md  build.bat  build.sh  example_integration.rs  linker.ld
src/templates/fastos_asm_rust_zig/: POTENCIAL.md  README.md
src/templates/java/: README.md  annotations.java  classes.java  collections.java  concurrency.java  exceptions.java  foreign_memory.java  generics.java  hello_world.java  inheritance.java  interfaces.java  lambdas.java  lib_async.java  lib_collections.java  lib_io.java  lib_utils.java  methods.java  pattern_matching.java  record_patterns.java  records.java  reflection.java  sealed_classes.java  streams.java  structured_concurrency.java  switch_expressions.java  text_blocks.java  variables.java  virtual_threads.java
src/templates/python/: conditionals.py  functions.py  hello_world.py  lists_dicts.py  loops.py  variables.py
src/templates/rust/: async.rs  closures.rs  collections.rs  concurrency.rs  control_flow.rs  enums.rs  error_handling.rs  functions.rs  generics.rs  hello_world.rs  lib_error.rs  lib_io.rs  lib_math.rs  lib_utils.rs  lifetimes.rs  macros.rs  modules.rs  ownership.rs  structs.rs  traits.rs  unsafe.rs  variables.rs
src/templates/vulkan/: CMakeLists.txt  README.md  buffers.cpp  commands.cpp  device.cpp  helpers.cpp  instance.cpp  main.cpp  pipeline.cpp  render_loop.cpp  resource_manager.cpp  shader.frag  shader.vert  swapchain.cpp  sync.cpp  sync_manager.cpp  texture.cpp  vulkan_types.h  window_manager.cpp
src/templates/zig/: functions.zig  hello_world.zig  variables.zig
src/ui/: cpp_selector.rs  language_manager.rs  layout.rs  menu.rs  mod.rs  nodes.rs  sidebar.rs  simple_renderer.rs  skia_renderer.rs  theme.rs  viewport.rs
src/ui/connectors/: mod.rs
src/ui/cut/: mod.rs
src/ui/menu/: edit.rs  file.rs  mod.rs  run.rs  selection.rs  terminal.rs  view.rs
src/ui/nodes_semantic/: mod.rs
src/utils/: editor_history.rs  mod.rs
src/vulkan/: context.rs  mod.rs  pipeline.rs  renderer.rs  text.rs
(+60 files in other folders)
