[package]
name = "ultra-omega"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
# Core wgpu con solo características esenciales
wgpu = { version = "0.19", features = ["spirv", "naga", "glsl"] }
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }
# Window handling
winit = "0.28"
# Serialización optimizada
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# UI esenciales
rfd = "0.14"
# Sistema de archivos
dirs = "5.0"
# Utilidades esenciales
which = "6.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# Renderizado de alto rendimiento
bytemuck = { version = "1.24", features = ["derive"] }
# Matemáticas optimizadas
glam = { version = "0.24", features = ["bytemuck"] }
# Logging para depuración
log = "0.4"
env_logger = "0.10"
