[package]
name = "ultra-omega"
version = "0.2.0"
edition = "2021"

[dependencies]
# Vulkan API bindings (ash) for total control over rendering
ash = "0.37"
ash-window = "0.12"
raw-window-handle = "0.5"

# Window handling
winit = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI essentials (native file dialogs)
rfd = "0.14"

# File system
dirs = "5.0"

# Utilities
which = "6.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# High-performance rendering math
bytemuck = { version = "1.24", features = ["derive"] }
glam = { version = "0.24", features = ["bytemuck"] }

# Logging
log = "0.4"
env_logger = "0.10"
