[package]
name = "ultra-omega"
version = "0.2.0"
edition = "2021"
description = "Entorno de Desarrollo Visual basado en Nodos, 100% Rust y Vulkan Puro"

[dependencies]
# Motor Vulkan de bajo nivel (Versión 0.38 obligatoria para ash-window 0.13)
ash = "0.38.0"
ash-window = "0.13.0"
raw-window-handle = "0.6.2"

# Manejo de ventanas y eventos (API moderna)
winit = "0.30.5"

# Serialización para guardar el estado de los nodos
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fecha y hora (necesario para project.rs, migration.rs, hda.rs)
chrono = "0.4"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilidades para vértices y shaders
bytemuck = { version = "1.14", features = ["derive"] }

# Matemáticas para UI y nodos
glam = "0.25"

# Directorios de configuración
dirs = "5.0"

[build-dependencies]
shaderc = "0.8"