# ═══════════════════════════════════════════════════════════════════════════════
# FastOS 64-bit: Cargo.toml
# Configuración para kernel Rust con integración ASM
# ═══════════════════════════════════════════════════════════════════════════════

[package]
name = "fastos64_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "kernel"
crate-type = ["staticlib"]

[dependencies]
# No hay dependencias estándar (no_std)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

# ═══════════════════════════════════════════════════════════════════════════════
# TARGET CONFIGURATION
# ═══════════════════════════════════════════════════════════════════════════════
# Crear archivo: .cargo/config.toml
# [build]
# target = "x86_64-unknown-none"
#
# [target.x86_64-unknown-none]
# runner = "qemu-system-x86_64 -kernel"

